fix(lesehelden): Avoid too much spaces

--- a/assets/lesehelden/main.scss
+++ b/assets/lesehelden/main.scss
@@ -46,7 +46,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    
+
     @media (max-width: $BREAKPOINT_PHONE) {
       flex-direction: column;
       margin-bottom: 0;
@@ -56,8 +56,16 @@ body {
   .description {
     flex: 0.6;
     text-align: justify;
-    line-height: 1.8rem;
-    font-size: 1.2rem;
+
+    p {
+      margin-top: 0;
+      line-height: 1.8rem;
+      font-size: 1.2rem;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
 
   img {
